[project]
name = "my-vllm"
version = "0.1.0"
description = "vLLM deployment for myself"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "python-dotenv>=1.1.0",
    "lmcache",
    "vllm",
    "torch",
]

[tool.uv]
index-url = "https://mirror.nju.edu.cn/pypi/web/simple"

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[dependency-groups]
dev = ["black>=25.1.0"]
