[project]
name = "my-vllm"
version = "0.1.0"
description = "vLLM deployment for myself"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "lmcache>=0.3.0",
    "python-dotenv>=1.1.0",
    "torch>=2.7.0",
    "vllm>=0.9.1",
]

[tool.uv]
index-url = "https://mirrors.ustc.edu.cn/pypi/web/simple"

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
vllm = [{ index = "vllm-nightly" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "vllm-nightly"
url = "https://wheels.vllm.ai/nightly"
explicit = true

[dependency-groups]
dev = ["black>=25.1.0"]
